--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,11 @@ cmake_minimum_required (VERSION 3.8)
 
 
 if(MSVC)
-	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /std:c++17 /arch:AVX2")
+	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /std:c++14 /arch:AVX2")
 	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /MP")
 	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /D_ENABLE_EXTENDED_ALIGNED_STORAGE")
 else()
-	set(CMAKE_CXX_STANDARD 17)
+	set(CMAKE_CXX_STANDARD 14)
 endif()
 include_directories("include/")
 include_directories("include/nanovoxel")
@@ -25,7 +25,13 @@ file(GLOB guiSRC
 	"include/imgui/*.cpp")
 
 # Add source to this project's executable.
-add_executable (nanovoxel  "src/main.cc" "src/corecl.cc" ${guiSRC} ${thirdpartySRC})
+add_executable (nanovoxel  "src/main.cc" "src/corecl.cc" "src/scene.cc" "src/ui.cc" ${guiSRC} ${thirdpartySRC})
+
+add_custom_command(TARGET nanovoxel PRE_BUILD
+                   COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/include/nanovoxel/kernel
+                        $<TARGET_FILE_DIR:nanovoxel>/kernel )
+
+# file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/include/nanovoxel/kernel DESTINATION ${CMAKE_BINARY_DIR})
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 # TODO: Add tests and install targets if needed.
