--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,15 @@
 # project specific logic here.
 #
 cmake_minimum_required (VERSION 3.8)
-
+project(nanovoxel)
 
 if(MSVC)
-	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /std:c++14 /arch:AVX2")
+	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /std:c++17 /arch:AVX2")
 	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /MP")
 	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /D_ENABLE_EXTENDED_ALIGNED_STORAGE")
+	
 else()
-	set(CMAKE_CXX_STANDARD 14)
+	set(CMAKE_CXX_STANDARD 17)
 endif()
 include_directories("include/")
 include_directories("include/nanovoxel")
@@ -26,13 +27,15 @@ file(GLOB guiSRC
 	"include/imgui/*.cpp")
 file(GLOB_RECURSE mykSRC
 	"include/miyuki/*.cc")
+file(GLOB_RECURSE kernelSRC "include/nanovoxel/kernel/*.*")
 # Add source to this project's executable.
-add_executable (nanovoxel  "src/main.cc" "src/corecl.cc" "src/scene.cc" "src/ui.cc" 
-${mykSRC} ${guiSRC} ${thirdpartySRC})
+add_executable (nanovoxel  "src/main.cc" "src/corecl.cc" "src/scene.cc" "src/ui.cc" "src/film.cc"
+${mykSRC} ${guiSRC} ${thirdpartySRC} ${kernelSRC} )
 
-add_custom_command(TARGET nanovoxel PRE_BUILD
+add_custom_command(TARGET nanovoxel PRE_LINK DEPENDS ${kernelSRC}
                    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/include/nanovoxel/kernel
-                        $<TARGET_FILE_DIR:nanovoxel>/kernel )
+                        $<TARGET_FILE_DIR:nanovoxel>/kernel
+						)
 
 # file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/include/nanovoxel/kernel DESTINATION ${CMAKE_BINARY_DIR})
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
