--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.1)
 
 project(NanoVoxel)
 
+set(CMAKE_CXX_STANDARD 17)
 
 include_directories(include/)
 include_directories(external/glfw/include)
