--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.1)
 project(NanoVoxel)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -fopenmp)
+#set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -fopenmp)
 
 include_directories(include/)
 include_directories(external/glfw/include)
